Fixed Double Scroll Issue, Scrolling is Component Independant now :)

--- a/hackpsu/src/app/globals.css
+++ b/hackpsu/src/app/globals.css
@@ -103,3 +103,9 @@
         color: var(--color-foreground);
     }
 }
+
+body, html {
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
+}
